* New `iterator()` retrieval method for select and custom sql statements to step through each row in a result set.
* `forEachRow()` method takes a lambda `(Int,T) -> Boolean`, the first argument being the row number and the second the row object. The lambda can return `false` to stop iteration.
* New `slice()` method fetches only a subset of the ResultSet.

== 0.4.3-alpha
* Simplified validation of generated code against an existing schema
* Added UUID column type for MariaDB
* Fixed inappropriate validation of table and column names. Only metadata name should be validated.
* Added support for custom schema names when the DB name conflicts with a reserved word of platform class, e.g. a schema called String
* Possibility to declare standard enum column mapping on `name()` or `ordinal()` without the need to create a custom type
* No need to implement `nullable()` for NonNullable columns. Nullable counterpart is obtained through reflection.

== 0.4.2-alpha
* Minor refactoring and documentation
* Fixed critical bug in maven configuration that prevented correct deployment to maven central

== 0.4.1-alpha
* Support for setting custom mappings for table and column names in generated code.
* Stricter validation when class and field names in generated code resolve to Java/Kotlin reserved keywords.

== 0.4.0-alpha
* Added PostgreSQL and MySQL vendor types
* Support for fully manual join syntax

== 0.3.2-alpha
* Aggregate functions in `BigDecimalColumn` return `BigDecimal`. Long or Double values means possible loss of range and precision.
* Added sample schema `nation.sql` to mariadb module for component testing.
* Manual commit and rollback checks for auto-commit mode.
* Dokka on Catalog, Aliases, Table and column metadata objects, providing the db name and foreign key references.

=== New features
* Added `Transaction.save(..)` as a convenience delegator to insert and update for `TableRowData` instances.

=== Breaking API changes